tests/expectations/compiler/constructor/two_constructors_fail.out
DCE_ENABLED:
Error [EPAR0370046]: A program can only have one constructor.
    --> compiler-test:9:5
     |
   9 |     async constructor() {
     |     ^^^^^

DCE_DISABLED:
Error [EPAR0370046]: A program can only have one constructor.
    --> compiler-test:9:5
     |
   9 |     async constructor() {
     |     ^^^^^
